# racecontrol

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  AUDIT-PROTOCOL.md  C:\RacingPoint\recovery-log.jsonl  CLAUDE.md  COGNITIVE-GATE-PROTOCOL.md  CREDENTIAL-ROTATION-POLICY.md  Cargo.toml  CWindowsTemprctest.txt  DEPENDENCIES.json  DEPLOY-CHANGELOG.md  DEPLOY-PLAN-v27-v28.md  Dockerfile  ECOSYSTEM-MANIFEST.json  FIX-DEPLOY-PROTOCOL.md  INCIDENT-RESPONSE-PLAN.md  LOGBOOK.md  LOGBOOK.md.conflict  MESHED-INTELLIGENCE-PLAN.md  PROACTIVE-DISCOVERY-PROTOCOL.md  PROTOCOL-QUICK-REF.md  STAFF-OFFBOARDING-CHECKLIST.md  UNIFIED-PROTOCOL.md  check_ac_ports.py  check_ac_telemetry.py  check_csp_config.py  check_csp_config2.py  deploy_pod8.ps1  deploy_pod8_v2.ps1  deploy_watchdogs.ps1  fix_autospawn.py  fix_billing.py  fix_cars.ps1  fix_conspit.py  full-test-err.txt  full-test-out.txt  launch_ac.py  package-lock.json  (+14 more)
.claude/: launch.json  settings.json
.config/: nextest.toml
.githooks/: pre-commit
.planning/: AGENT-HARNESS-V26.1.md  MESHED-INTELLIGENCE.md  MILESTONES.md  PROJECT-v12.md  PROJECT-v14.md  PROJECT-v16.md  PROJECT-v19.md  PROJECT.md  REQUIREMENTS-v11.2.md  REQUIREMENTS-v12.1.md  REQUIREMENTS-v12.md  REQUIREMENTS-v16.md  REQUIREMENTS-v17.1.md  REQUIREMENTS-v19.md  REQUIREMENTS-v25.md  REQUIREMENTS-v26.1.md  REQUIREMENTS-v27.md  REQUIREMENTS.md  ROADMAP-prev-v30.md  ROADMAP-v11.2.md  ROADMAP-v12.1.md  ROADMAP-v12.md  ROADMAP-v16.md  ROADMAP-v19.md  ROADMAP-v27.md  ROADMAP-v30.md  ROADMAP-v31.md  ROADMAP.md  (+13 more)
crates/racecontrol/: Cargo.toml  build.rs
crates/racecontrol/data/: launch-events.jsonl
crates/racecontrol/src/: ac_server.rs  accounting.rs  action_queue.rs  activity_log.rs  ai.rs  alert_engine.rs  app_health_monitor.rs  backup_pipeline.rs  billing.rs  billing_fsm.rs  billing_replay.rs  bono_relay.rs  bot_coordinator.rs  business_aggregator.rs  business_forecast.rs  cafe.rs  cafe_alerts.rs  cafe_marketing.rs  cafe_promos.rs  cascade_guard.rs  catalog.rs  cloud_sync.rs  config.rs  config_push.rs  data_collector.rs  dependency_chain.rs  deploy.rs  deploy_awareness.rs  driver_rating.rs  dynamic_pricing.rs  error_rate.rs  escalation.rs  event_archive.rs  feedback_loop.rs  flags.rs  fleet_alert.rs  fleet_deploy.rs  fleet_healer.rs  fleet_health.rs  fleet_kb.rs  (+55 more)
crates/racecontrol/src/api/: metrics.rs  metrics_prometheus.rs  metrics_query.rs  mod.rs  routes.rs  security.rs  survival.rs
crates/racecontrol/src/auth/: admin.rs  middleware.rs  mod.rs  rate_limit.rs
crates/racecontrol/src/crypto/: encryption.rs  mod.rs  redaction.rs
crates/racecontrol/src/db/: mod.rs
crates/racecontrol/src/ws/: mod.rs
crates/racecontrol/tests/: integration.rs
crates/rc-agent/: Cargo.toml  DEBUG-BLANKING-SCREEN.md  rc-agent.example.toml
crates/rc-agent/src/: ac_launcher.rs  ai_debugger.rs  app_state.rs  billing_guard.rs  budget_tracker.rs  budget_tracker_store.rs  cognitive_gate.rs  config.rs  content_scanner.rs  controls_template.ini  debug_server.rs  diagnosis_planner.rs  diagnostic_engine.rs  diagnostic_log.rs  driving_detector.rs  dxgi_capture.rs  eval_rollup.rs  event_loop.rs  experience_actions.rs  experience_collector.rs  experience_score.rs  failure_monitor.rs  feature_flags.rs  ffb_controller.rs  firewall.rs  game_doctor.rs  game_launch_retry.rs  game_process.rs  inactivity_monitor.rs  iracing_checks.rs  kb_hardening.rs  kb_promotion_store.rs  kiosk.rs  knowledge_base.rs  lock_screen.rs  main.rs  mesh_gossip.rs  mma_cache.rs  mma_engine.rs  model_eval_store.rs  (+25 more)
crates/rc-agent/src/sims/: assetto_corsa.rs  assetto_corsa_evo.rs  f1_25.rs  iracing.rs  lmu.rs  mod.rs
crates/rc-common/: Cargo.toml
crates/rc-common/src/: ai_names.rs  boot_resilience.rs  config_schema.rs  exec.rs  fleet_event.rs  lib.rs  mesh_types.rs  ollama.rs  pod_id.rs  protocol.rs  recovery.rs  safety.rs  survival_types.rs  types.rs  udp_protocol.rs  verification.rs  watchdog.rs
crates/rc-core/: Cargo.toml
crates/rc-core/src/: ac_camera.rs  ac_server.rs  accounting.rs  action_queue.rs  activity_log.rs  ai.rs  billing.rs  catalog.rs  cloud_sync.rs  config.rs  deploy.rs  email_alerts.rs  error_aggregator.rs  friends.rs  game_launcher.rs  lap_tracker.rs  lib.rs  main.rs  multiplayer.rs  pod_healer.rs  pod_monitor.rs  pod_reservation.rs  remote_terminal.rs  scheduler.rs  state.rs  udp_heartbeat.rs  wallet.rs  wol.rs
crates/rc-core/src/api/: mod.rs  routes.rs
crates/rc-core/src/auth/: mod.rs
crates/rc-core/src/db/: mod.rs
crates/rc-core/src/ws/: mod.rs
crates/rc-core/tests/: integration.rs
crates/rc-guardian/: Cargo.toml  build.rs
crates/rc-guardian/src/: alert.rs  comms.rs  config.rs  health.rs  main.rs  restart.rs
crates/rc-process-guard/: Cargo.toml
crates/rc-process-guard/src/: main.rs
crates/rc-sentry/: Cargo.toml  DEBUG-RESTART-ISSUE.md  build.rs
crates/rc-sentry-ai/: Cargo.toml  cameras.html
crates/rc-sentry-ai/src/: auth.rs  config.rs  frame.rs  health.rs  lib.rs  live_stream.rs  main.rs  mjpeg.rs  nvr.rs  playback.rs  relay.rs  stream.rs
crates/rc-sentry-ai/src/alerts/: engine.rs  mod.rs  toast.rs  types.rs  unknown.rs  ws.rs
crates/rc-sentry-ai/src/attendance/: db.rs  engine.rs  mod.rs  routes.rs  shifts.rs
crates/rc-sentry-ai/src/detection/: decoder.rs  mod.rs  pipeline.rs  scrfd.rs  types.rs
crates/rc-sentry-ai/src/enrollment/: routes.rs  service.rs  types.rs
crates/rc-sentry-ai/src/privacy/: audit.rs  consent.rs  deletion.rs  mod.rs  retention.rs
crates/rc-sentry-ai/src/recognition/: alignment.rs  arcface.rs  clahe.rs  db.rs  gallery.rs  mod.rs  quality.rs  tracker.rs  types.rs
crates/rc-sentry/src/: debug_memory.rs  main.rs  mesh_client.rs  ollama.rs  sentry_config.rs  session1_spawn.rs  tier1_fixes.rs  watchdog.rs
crates/rc-watchdog/: Cargo.toml
crates/rc-watchdog/src/: binary_validator.rs  bono_alert.rs  failure_state.rs  health_poller.rs  james_monitor.rs  main.rs  mma_diagnosis.rs  reporter.rs  rollback_manager.rs  service.rs  session.rs  survival_reporter.rs
crates/weekly-report/: Cargo.toml
crates/weekly-report/src/: main.rs
(+2990 files in other folders)
