[workspace]
resolver = "2"
members = [
    "crates/rc-common",
    "crates/racecontrol",
    "crates/rc-agent",
    "crates/rc-watchdog",
    "crates/rc-installer",
    "crates/rc-sentry",
    "crates/weekly-report",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["RacingPoint <bono@racingpoint.in>"]
repository = "https://github.com/racingpoint/racecontrol"

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
toml = "0.8"
jsonwebtoken = "9"
rand = "0.8"

# rc-common
rc-common = { path = "crates/rc-common" }
