[package]
name = "racecontrol-crate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "racecontrol"
path = "src/main.rs"

[dependencies]
rc-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# mDNS discovery
mdns-sd = "0.12"

# WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Auth
jsonwebtoken = { workspace = true }
rand = { workspace = true }

# AI/HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Base64 encoding (Gmail API message encoding)
base64 = "0.22"

# URL encoding (for Evolution API instance names)
urlencoding = "2"

# Server ops (remote command execution)
sysinfo = "0.33"
socket2 = "0.5"
http-body-util = "0.1"
