[package]
name = "racecontrol-crate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "racecontrol"
path = "src/main.rs"

[dependencies]
rc-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

# Web framework
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Menu import / image upload
calamine = "0.34"
csv = "1.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# mDNS discovery
mdns-sd = "0.12"

# WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Auth
jsonwebtoken = { workspace = true }
rand = { workspace = true }
argon2 = { workspace = true }
aes-gcm = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# AI/HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Base64 encoding (Gmail API message encoding)
base64 = "0.22"

# URL encoding (for Evolution API instance names)
urlencoding = "2"

# IST timezone conversion
chrono-tz = "0.10"

# Server ops (remote command execution)
sysinfo = "0.33"
socket2 = "0.5"
http-body-util = "0.1"
tower_governor = "0.8"
governor = "0.10"

# TLS termination + venue CA mTLS (Phase 305)
axum-server = { version = "0.8", features = ["tls-rustls"] }
rcgen = "0.14"
tower-helmet = "0.3"
# Direct rustls dep for mTLS WebPkiClientVerifier
rustls = { version = "0.23", features = ["ring"] }

# Windows singleton mutex (prevent zombie crash-loops, same as rc-agent 305638b)
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["synchapi", "errhandlingapi", "handleapi"] }

[dev-dependencies]
# test-util enables tokio::time::pause() and advance() for time-controlled unit tests
tokio = { version = "1", features = ["test-util"] }
