[package]
name = "rc-agent-crate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rc-agent"
path = "src/main.rs"

[dependencies]
rc-common = { workspace = true, features = ["tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

# SHA256 for binary identity (OTA-10)
sha2 = { workspace = true }

# Socket options (SO_REUSEADDR for port 8090 rebind)
socket2 = "0.5"

# WebSocket client
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# TLS connector for wss:// WebSocket connections (SEC-07)
native-tls = "0.2"

# mDNS
mdns-sd = "0.12"

# USB HID for wheelbase monitoring
hidapi = "2"

# Process monitoring (cross-platform)
sysinfo = "0.33"

# Local SQLite knowledge base (Phase 230 — Meshed Intelligence Tier 2)
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client for AI debugger (optional — only needed when ai-debugger feature is enabled)
reqwest = { version = "0.12", features = ["json"], optional = true }

# Remote ops HTTP server (merged pod-agent)
axum = "0.8"

# Constant-time secret comparison for service key auth
subtle = "2.6"

# QR code generation for lock screen
qrcode = "0.13"

# Cross-platform directory paths (Documents, etc.)
dirs-next = "2"

# Random selection for AI driver name pool
rand = "0.8"

# Phase 206: Sentinel file watching via ReadDirectoryChangesW (OBS-04)
notify = "8.2.0"

# Startup folder scanning for process guard (optional — only needed when process-guard feature is enabled)
walkdir = { version = "2", optional = true }

# Windows process management
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi", "winuser", "memoryapi", "basetsd", "synchapi", "errhandlingapi", "winerror", "wingdi", "libloaderapi"] }

[features]
default = ["ai-debugger", "process-guard", "keyboard-hook", "http-client"]
ai-debugger = ["dep:reqwest"]
process-guard = ["dep:walkdir"]
keyboard-hook = []
# http-client enables reqwest for core networking (allowlist polling, billing, kiosk classify)
# Separate from ai-debugger so the two can be enabled independently in future
http-client = ["dep:reqwest"]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serial_test = "3"
mockall = "0.13"
tokio = { version = "1", features = ["test-util"] }
