[package]
name = "rc-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
wait-timeout = "0.2"

[dependencies.tokio]
workspace = true
optional = true

[features]
tokio = ["dep:tokio"]
