[package]
name = "rc-guardian"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "External guardian — Layer 3 survival system for RaceControl server monitoring"

[[bin]]
name = "rc-guardian"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
