[package]
name = "rc-process-guard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rc-process-guard"
path = "src/main.rs"

[dependencies]
rc-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }

# Process monitoring — same version as rc-agent (DO NOT upgrade past 0.33)
sysinfo = "0.33"

# HTTP client for violation reporting and whitelist fetch
reqwest = { version = "0.12", features = ["json"] }

# Startup folder scanning
walkdir = "2"

[target.'cfg(windows)'.dependencies]
# Windows process flags (CREATE_NO_WINDOW) — registry via reg shell-out (same as rc-agent)
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi", "errhandlingapi"] }
