[package]
name = "rc-sentry-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rc-sentry-ai"
path = "src/main.rs"

[dependencies]
retina = "0.4"
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
rc-common = { workspace = true }
anyhow = { workspace = true }
url = "2"
