[package]
name = "rc-sentry-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rc-sentry-ai"
path = "src/main.rs"

[lib]
name = "rc_sentry_ai"
path = "src/lib.rs"

[dependencies]
retina = "0.4"
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
rc-common = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
url = "2"
futures = "0.3"
ort = { version = "2.0.0-rc.12", features = ["cuda"] }
openh264 = "0.9"
ndarray = "0.17"
image = "0.25"
imageproc = "0.26"
clahe = "0.1"
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
