[package]
name = "rc-sentry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rc-sentry"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rc-common = { path = "../rc-common" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = "0.33"
tungstenite = { version = "0.26", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = ["watchdog", "tier1-fixes", "ai-diagnosis", "mesh"]
watchdog = []
tier1-fixes = ["watchdog"]
ai-diagnosis = []
mesh = ["tungstenite", "hmac", "sha2", "dep:hex"]

[dependencies.hex]
version = "0.4"
optional = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "consoleapi",
    "errhandlingapi",
    "handleapi",
    "processthreadsapi",
    "securitybaseapi",
    "userenv",
    "winbase",
    "winnt",
    "wtsapi32",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
