[package]
name = "rc-watchdog"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "rc-watchdog"
path = "src/main.rs"

[dependencies]
rc-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
toml = { workspace = true }

# Windows service lifecycle
windows-service = "0.8"

# HTTP crash reports — blocking (no tokio needed)
reqwest = { version = "0.12", features = ["json", "blocking"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "wtsapi32",
    "processthreadsapi",
    "winbase",
    "handleapi",
    "securitybaseapi",
    "userenv",
    "winnt",
    "errhandlingapi",
    "synchapi",
    "winerror",
] }
